This commit updates contact information and format

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,14 +1,27 @@
 <!DOCTYPE <html>
     <head>
-        <title>About Me | My Website</title>
+        <title>About Me - Matthew W Bradshaw</title>
+        <meta charset="UTF-8" />
+        <meta name="description" content="My Online Portfolio" />
+        <meta name="author " content="Matthew Bradshaw" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="./resources/css/index.css" type="text/css" rel="stylesheet" />
     </head>
   
     <body>
       <header>
+        <nav>
+          <ul class = "main-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="project.html">My Projects</a></li>
+            <li><a href="resume/Matthew Bradshaw - Resume.pdf" download>My Resume</a></li>
+          </ul>
+        </nav>
         <h1>My Online Portfolio</h1>
-          <h2>About Me</h2>
       </header>
 
+      <h2>About Me</h2>
 
       <figure>
         <img src="images/Picture.JPG" alt="An image of a student" />
@@ -28,7 +41,12 @@
 
 
     <footer>
-      
+      <p>Contact Information</p>
+      <p>
+        <a href="mailto:matthew_bradshaw1234@hotmail.com"
+          >matthew_bradshaw1234@hotmail.com</a
+        >
+      </p>
     </footer>
     </body>
 </html>
