--- a/project.html
+++ b/project.html
@@ -1,9 +1,52 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Projects | My Website</title>
-    <meta />
+    <title>My Projects - Matthew W Bradshaw</title>
+    <meta charset="UTF-8" />
+    <meta name="description" content="My Online Portfolio" />
+    <meta name="author " content="Matthew Bradshaw" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet" />
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <ul class="main-nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="project.html">My Projects</a></li>
+          <li>
+            <a href="resume/Matthew Bradshaw - Resume.pdf" download
+              >My Resume</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <h1></h1>
+    </header>
+
+    <figure>
+      <img />
+      <figcaption></figcaption>
+    </figure>
+
+    <main>
+      <section>
+        <article>
+          <p></p>
+          <p></p>
+        </article>
+      </section>
+    </main>
+
+    <footer>
+      <p>Contact Information</p>
+      <p>
+        <a href="mailto:matthew_bradshaw1234@hotmail.com"
+          >matthew_bradshaw1234@hotmail.com</a
+        >
+      </p>
+    </footer>
+  </body>
 </html>
