--- a/index.html
+++ b/index.html
@@ -2,53 +2,53 @@
 <html>
   <section>
     <head>
-      <title>My Website</title>
+      <title>Matthew W Bradshaw - Full Stack Web Developer</title>
+      <meta charset="UTF-8" />
       <meta name="description" content="My Online Portfolio" />
       <meta name="author " content="Matthew Bradshaw" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+      <link href="./resources/css/index.css" type="text/css" rel="stylesheet" />
     </head>
   </section>
 
   <body>
     <header>
-      <h1></h1>
       <nav>
-        <a href="aboutme.html">About Me</a>
-        <a href="project.html">My Projects</a>
-        <a href="resume/Matthew Bradshaw - Resume.pdf" download>My Resume</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="project.html">My Projects</a></li>
+          <li>
+            <a href="resume/Matthew Bradshaw - Resume.pdf" download
+              >My Resume</a
+            >
+          </li>
+        </ul>
       </nav>
+      <h1></h1>
     </header>
 
-
-
-
     <figure>
-      <img>
+      <img />
       <figcaption></figcaption>
     </figure>
-
-
 
     <main>
       <section>
         <article>
-          <p>
-          <p>
+          <p></p>
+          <p></p>
         </article>
       </section>
     </main>
 
-
-  
-
-
-
-
-
     <footer>
       <p>Contact Information</p>
-      <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+      <p>
+        <a href="mailto:matthew_bradshaw1234@hotmail.com"
+          >matthew_bradshaw1234@hotmail.com</a
+        >
+      </p>
     </footer>
   </body>
 </html>
