--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav>
-        <ul>
+        <ul class="main-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="project.html">My Projects</a></li>
@@ -30,7 +30,6 @@
 
     <figure>
       <img />
-      <figcaption></figcaption>
     </figure>
 
     <main>
