This commit will update the visuals for the About Me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,11 +5,11 @@
         <meta name="description" content="My Online Portfolio" />
         <meta name="author " content="Matthew Bradshaw" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="./resources/css/index.css" type="text/css" rel="stylesheet" />
+        <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
     </head>
   
     <body>
-      <header>
+      <header class="main-heading">
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -29,19 +29,32 @@
             <p>
               Hi my name is Matthew Bradshaw and this is my online portfolio. I'm fairly
               new to programming but I'll try my best!
-            
             </p>
         </section>
+
+        <section class="experience">
+            <h2>Experience</h2>
+            <p>
+
+            </p>
+            <h3 id="language-title">The programming languages I am proficient in are:</h3>
+            <ul class="language-list">
+              <li><a href="#">Java</a></li>
+              <li><a href="#">Python</a></li>
+              <li><a href="#"">HTML</a></li>
+              <li><a href="#"">CSS</a></li>
+            </ul>
+        </secttion>
       </main>
 
 
     <footer>
-      <p>Contact Information</p>
+      <hr>
+      <h3>Contact Information</h3>
       <p>
 
         <a href="mailto:matthew_bradshaw1234@hotmail.com"
-          >matthew_bradshaw1234@hotmail.com</a
-        >
+          >matthew_bradshaw1234@hotmail.com</a>
       </p>
     </footer>
     </body>
