--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <meta name="description" content="My Online Portfolio" />
     <meta name="author " content="Matthew Bradshaw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet" />
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
 
   <body>
@@ -40,6 +40,7 @@
     </main>
 
     <footer>
+      <hr>
       <p>Contact Information</p>
       <p>
         <a href="mailto:matthew_bradshaw1234@hotmail.com"
