--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
       <title>Matthew W Bradshaw - Full Stack Web Developer</title>
       <meta charset="UTF-8" />
       <meta name="description" content="My Online Portfolio" />
-      <meta name="author " content="Matthew Bradshaw" />
+      <meta name="author" content="Matthew Bradshaw" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link href="./resources/css/index.css" type="text/css" rel="stylesheet" />
+      <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
     </head>
   </section>
 
@@ -42,6 +42,7 @@
     </main>
 
     <footer>
+      <hr>
       <p>Contact Information</p>
       <p>
         <a href="mailto:matthew_bradshaw1234@hotmail.com"
