This commit will update the placement of the website's main navigation elements

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
         <title>About Me - Matthew W Bradshaw</title>
         <meta charset="UTF-8" />
         <meta name="description" content="My Online Portfolio" />
-        <meta name="author " content="Matthew Bradshaw" />
+        <meta name="author" content="Matthew Bradshaw" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
     </head>
@@ -23,7 +23,7 @@
     
       
       <main>
-        <section>
+        <section class="background-box">
             <h2>Background</h2>
             <img src="images/Picture.JPG" alt="An image of a student" />
             <p>
@@ -32,19 +32,18 @@
             </p>
         </section>
 
-        <section class="experience">
-            <h2>Experience</h2>
-            <p>
-
-            </p>
-            <h3 id="language-title">The programming languages I am proficient in are:</h3>
+        <section class="skills">
+            <h2>Skills</h2>
+            <p>The programming languages I am proficient in are:</p>
             <ul class="language-list">
               <li><a href="#">Java</a></li>
               <li><a href="#">Python</a></li>
               <li><a href="#"">HTML</a></li>
               <li><a href="#"">CSS</a></li>
             </ul>
-        </secttion>
+
+            <!-- <p>Dev Tools</p> */ -->
+        </section>
       </main>
 
 
