--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   </section>
 
   <body>
-    <header>
+    <header class="main-heading">
       <nav>
-        <ul class="main-nav">
+        <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="project.html">My Projects</a></li>
-          <li>
+          <li class="resume">
             <a href="resume/Matthew Bradshaw - Resume.pdf" download
               >My Resume</a
             >
