--- a/project.html
+++ b/project.html
@@ -4,15 +4,15 @@
     <title>My Projects - Matthew W Bradshaw</title>
     <meta charset="UTF-8" />
     <meta name="description" content="My Online Portfolio" />
-    <meta name="author " content="Matthew Bradshaw" />
+    <meta name="author" content="Matthew Bradshaw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
 
   <body>
-    <header>
+    <header class="main-heading">
       <nav>
-        <ul class="main-nav">
+        <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="project.html">My Projects</a></li>
