This commit will update the layout for the webpage's experience section

--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="project.html">My Projects</a></li>
+          <li class="resume"><a href="project.html">My Projects</a></li>
           <li>
             <a href="resume/Matthew Bradshaw - Resume.pdf" download
               >My Resume</a
@@ -23,12 +23,9 @@
           </li>
         </ul>
       </nav>
-      <h1></h1>
+      <h1>My Projects</h1>
     </header>
 
-    <figure>
-      <img />
-    </figure>
 
     <main>
       <section>
@@ -41,7 +38,7 @@
 
     <footer>
       <hr>
-      <p>Contact Information</p>
+      <h3>Contact Information</h3>
       <p>
         <a href="mailto:matthew_bradshaw1234@hotmail.com"
           >matthew_bradshaw1234@hotmail.com</a
