--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
           </ul>
         </nav>
         <h1>My Online Portfolio</h1>
-        <img id="headshot" src="images/Picture.JPG" alt="An image of a student" />
+        <img id="headshot" src="resources/images/Picture.JPG" alt="An image of a student" />
       </header>
     
       
@@ -81,7 +81,7 @@
       <p>
 
         <a href="mailto:matthew_bradshaw1234@hotmail.com"
-          >matthew_bradshaw1234@hotmail.com</a>
+          >matthewbradshaw875@gmail.com</a>
       </p>
     </footer>
     </body>
