--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 
   <body>
     <header class="main-heading">
-      <nav>
+      <nav class="main-nav">
+        <span id="main-heading-name">Matthew W. Bradshaw</span>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="project.html">My Projects</a></li>
           <li class="resume">
             <a href="resume/Matthew Bradshaw - Resume.pdf" download
-              >My Resume</a
-            >
+              >My Resume</a>
           </li>
+          <li><a href="contactme.html">Contact Me</a></li>
         </ul>
       </nav>
       <h1></h1>
