--- a/project.html
+++ b/project.html
@@ -11,7 +11,8 @@
 
   <body>
     <header class="main-heading">
-      <nav>
+      <nav class="main-nav">
+        <span id="main-heading-name">Matthew W. Bradshaw</span>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutme.html">About Me</a></li>
@@ -21,6 +22,7 @@
               >My Resume</a
             >
           </li>
+          <li><a href="contactme.html">Contact Me</a></li>
         </ul>
       </nav>
       <h1>My Projects</h1>
