This commit will update the work experience section

--- a/aboutme.html
+++ b/aboutme.html
@@ -80,37 +80,37 @@
         </section>
         
 
-        <section class="work experience">
+        <section class="work-experience">
           <h2>Work Experience</h2>
           <h3>Career Ambassador<h3>
-            <ul>
           <p>Claflin University (August 2021 - Present)</p>
           <p>400 Magnolia St, Orangeburg, SC 29115</p>
-          <p>Worked with a team of other students to promote and assist in career fairs, graduate and professional schools’ visitation days, workshops, community service events and the utilization of the Career Development Office’s services.</p>
+            <ul>
+          <li>Worked with a team of other students to promote and assist in career fairs, graduate and professional schools’ visitation days, workshops, community service events and the utilization of the Career Development Office’s services.</li>
             </ul>
 
           <p>Orientation Leader</p>
           <p>Claflin University (August 2021)</p>
           <p>400 Magnolia St, Orangeburg, SC 29115</p>
             <ul>
-          <p>Assisted with the facilitation of the new student orientation and move in activities for first year students of Claflin University. Aided incoming students with moving into their respective dorms while answering questions from parents and students alike about campus facilities.</p>
-          <p>In addition to that, I was put in charge of a small group of 23 students and was responsible for hosting campus tours and informational sessions.</p>
+          <li>Assisted with the facilitation of the new student orientation and move in activities for first year students of Claflin University. Aided incoming students with moving into their respective dorms while answering questions from parents and students alike about campus facilities.</li>
+          <li>In addition to that, I was put in charge of a small group of 23 students and was responsible for hosting campus tours and informational sessions.</li>
             </ul>
 
           <p>Research Intern</p>
           <p>University of Pittsburgh’s Human Engineering Research Laboratories (June  - July 2021)</p>
           <p>4200 Fifth Ave, Pittsburgh, PA 15260</p>
             <ul>
-          <p>Worked with a team of engineers to develop an iteration of the Agile Life’s Patient Transfer System that could better transfer veterans and other from bed to wheelchair and vice versa.</p>
-          <p>I was tasked with creating an ergonomic user interface for the Raspberry Pi that was used to operate the bed commands using the Python library tkinter.</p>
+          <li>Worked with a team of engineers to develop an iteration of the Agile Life’s Patient Transfer System that could better transfer veterans and other from bed to wheelchair and vice versa.</li>
+          <li>I was tasked with creating an ergonomic user interface for the Raspberry Pi that was used to operate the bed commands using the Python library tkinter.</li>
             </ul>
 
           <p>Claflin University Bookstore</p>
           <p>Claflin University (December 2021)</p>
           <p>400 Magnolia St, Orangeburg, SC 29115</p>
             <ul>
-          <p>Assisted customers with book rental returns, locating store items, general inquiries and retail transactions at the cash register.  </p>
-          <p>In addition to this, I was apart of a team that was responsible for organizing and packaging books that each student would need for the subsequent semester.</p>
+          <li>Assisted customers with book rental returns, locating store items, general inquiries and retail transactions at the cash register.  </li>
+          <li>In addition to this, I was apart of a team that was responsible for organizing and packaging books that each student would need for the subsequent semester.</li>
             </ul>
         </section>
       </main>
