This commit will update the website's layout and remove the margins between sections

--- a/aboutme.html
+++ b/aboutme.html
@@ -181,9 +181,9 @@
 
     <footer>
       <hr>
-      <h3>Contact Information</h3>
+      <h2>Contact Information</h2>
+      <p>Interested in reaching out?</p>
       <p>
-
         <a href="mailto:matthew_bradshaw1234@hotmail.com"
           >matthewbradshaw875@gmail.com</a>
       </p>
