This commit will update the layout of the form section of the website

--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
 
     <script src="myScript.js"></script>
     <footer>
-      <hr>
       <h2 id="contact-heading">Contact</h2>
       <!-- <p>
         <a href="mailto:matthew_bradshaw1234@hotmail.com"
@@ -198,11 +197,13 @@
         <p>Interested in reaching out?</p>
         <form class="contact" action="">
           <ul>
-            <li><input type="text" name="name" id="fname" placeholder="Name"></li>
-            <li><input type="text" name="email" id="email" placeholder="Email"></li>
+
+            <li><input type="text" name="name" id="fname" placeholder="John"></li>
+            <li><input type="text" name="name" id="lname" placeholder="Doe"></li>
+            <li><input type="text" name="email" id="email" placeholder="john_doe1234@gmail.com"></li>
             <li><input type="text" name="subject" id="subject" placeholder="Subject"></li>
             <li><textarea id="message" placeholder="Message"></li>
-            <input type="submit">
+            <li><input type="submit"></li>
         </form>
     </div>
     </footer>
