This commit will add a vector illustration to the About Me section

--- a/index.html
+++ b/index.html
@@ -47,12 +47,27 @@
       <main>
         <section class="aboutme-box">
           <h2 id="aboutme-box-heading">About Me</h2>
-            <!-- <img id="headshot" src="resources/images/Picture.JPG" alt="An image of a student" /> -->
-            <p>
-              I am a conscientious, detail-orientated and creative computer engineering student currently attending Claflin University as a rising sophomore. I am a member of the Alice Carson Tisdale Honors College and the current president of the National Society of Black Engineer's Claflin Chapter. My keen interest are automation, web development and design and digital media.
-              After receiving my degree, I plan to become a web developer and freelancing digital artist.
-            </p>
+            
+            <div class="blockform">
+              <div class="aboutme-illustration-block">
+                <img src="resources/images/icons/vector-illustrations/about-me.png">
+              </div>
+
+              <div class="aboutme-description-block">
+                <p>
+                  I am a conscientious, detail-orientated and creative computer engineering student currently attending Claflin University as a rising sophomore. I am a member of the Alice Carson Tisdale Honors College and the current president of the National Society of Black Engineer's Claflin Chapter. My keen interest are automation, web development and design and digital media.
+                  After receiving my degree, I plan to become a web developer and freelancing digital artist.
+                </p>
+              </div>
+            </div>
         </section>
+
+
+
+
+
+
+
 
         <section class="skills">
             <h2 id="skills-box-heading">Skills</h2>
@@ -190,9 +205,9 @@
     <footer>
       <h2 id="contact-heading">Contact</h2>
       <!-- <p>
-        <a href="mailto:matthew_bradshaw1234@hotmail.com"
-          >matthewbradshaw875@gmail.com</a>
+  
       </p> -->
+      <!-- <div class="blockform" -->
       <div class="contact-form">
         <!-- <p>Interested in reaching out?</p> -->
         <div class="form-block">
@@ -216,13 +231,16 @@
               <label class="form-label" for="fname">Message</label>
               <li><textarea id="message" placeholder="Message"></textarea></li>
               <li><input type="submit" id="submit-button"></li>
+              <li><p>or email me directly at <a href="mailto:matthewbradshaw875@gmail.com"
+                >matthewbradshaw875@gmail.com</a></p></li>
             </ul>
           </form>
+        </div>
       </div>
-    </div>
+      <!-- </div> -->
 
     <div class="copyright-information">
-      <p>&#169; Matthew Bradshaw</p>
+      <p>&#169; Matthew Bradshaw 2021</p>
     </div>
 
     </footer>
